add edit index show delete

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,4 +2,5 @@
 <h1> This is a about page<h1>
     <hr>
     <%=link_to 'Home' ,root_path%>
+     <%= link_to 'Alpha Blog',articles_path%>
     </body>
