--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <body bgcolor="cyan">
 <h1> This is a home page<h1>
     <hr>
+    <%= link_to 'Alpha Blog',articles_path%>
     <%=link_to 'About' ,about_path%>
     </body>
