--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
-<body bgcolor="cyan">
-<h1> This is a home page<h1>
-    <hr>
-    <%= link_to 'Alpha Blog',articles_path%>
-    <%=link_to 'About' ,about_path%>
-    </body>
+<div class=" center jumbotron">
+  <h1>Alpha Blog</h1>
+  
+  <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
+  </div>
