--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,12 +1,4 @@
-<% if @article.errors.any? %>
-  <h3>The following errors prevented the article from being saved:</h3>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-     <li><%= msg %></li> 
-    <% end %>
-  </ul>
-<% end %>
-
+<%= render'shared/errors' , obj: @article%>
 
   <div class='row'>
   <div class='col-md-12'>
