--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,16 @@
-<h1> Showing the article</h1>
-<p>
-Title:  <%= @article.title%></br>
- Description:   <%=@article.description%>
- </p>
- </br>
- <%= link_to "Edit Article", edit_article_path(@article)%>
- </br>
-<%= link_to "Back to Articles Listing", articles_path%>
+<h2 align="center"> Title:  <%= @article.title %></h2>
+<div class="well col-xs-8 col-xs-offset-2">
+    <h4 class="center" >
+        <strong> Description:</strong></h4>
+        <hr>
+        <%= simple_format(@article.description) %>
+ 
+    <div class="article-actions">
+        <%= link_to "Edit Article", edit_article_path(@article),  class: "btn btn-xs btn-primary" %>
+        <%= link_to "Delete Article", article_path(@article),method: :delete,
+                                        data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, 
+                                        class: "btn btn-xs btn-danger" %>
+        <%= link_to "View all Articles", articles_path,  class: "btn btn-xs btn-success" %>
+    </div>
+</div>
+
