--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,14 +31,22 @@ height: 400px;
     border-top: 1px solid #eaeaea;
     padding-top: 5px;
 }
+.article-title{
+font-weight: bold;
+font-size: 1.5em;
+}
+.article-body{
+border-top:1px solid #eaeaea;
+padding-top: 15px;
+padding-bottom: 15px;
+}
 footer{
-    
+    border-top: 1px solid #eaeaea;
     margin-top: 45px;
     padding-top: 5px;
-    border-top: 1px solid #eaeaea;
     color: #777;
 }
- footer a:hover{
+ footer:hover{
     color: #222;
  }
  footer small{
