--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,6 @@
 <h1 align="center"> Listing All Articles</h1>
 <% @articles.each do |article| %>
+
 <div class ="row">
     <div class= "col-xs-8 col-xs-offset-2">
         <div class="well wel-lg">
@@ -8,6 +9,10 @@
             </div>
             <div class ="article-body">
                 <%= truncate(article.description, length: 100 )%>
+                <small>Created by : <%= article.user.username %>
+                <%= time_ago_in_words(article.created_at) %> ago
+                Last updated: <%= time_ago_in_words(article.updated_at) %> ago
+                </small>
             </div>
              <div class="article-actions">
         <%= link_to "Edit Article", edit_article_path(article),  class: "btn btn-xs btn-primary" %>
