--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,10 @@ border-top:1px solid #eaeaea;
 padding-top: 15px;
 padding-bottom: 15px;
 }
+.article-meta-details{
+    border-top: 1px solid #eaeaea;
+    margin-top: 15px;
+}
 footer{
     border-top: 1px solid #eaeaea;
     margin-top: 45px;
