--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,16 +3,18 @@
 
 <div class ="row">
     <div class= "col-xs-8 col-xs-offset-2">
-        <div class="well wel-lg">
+        <div class="well well-lg">
             <div class="article-title">
                 <%= link_to article.title, article_path(article)%>
             </div>
             <div class ="article-body">
                 <%= truncate(article.description, length: 100 )%>
-                <small>Created by : <%= article.user.username %>
-                <%= time_ago_in_words(article.created_at) %> ago
-                Last updated: <%= time_ago_in_words(article.updated_at) %> ago
-                </small>
+                <div class= "article-meta-details">
+                    <small>Created by : <%= article.user.username %>
+                    <%= time_ago_in_words(article.created_at) %> ago
+                    Last updated: <%= time_ago_in_words(article.updated_at) %> ago
+                    </small>
+                </div>
             </div>
              <div class="article-actions">
         <%= link_to "Edit Article", edit_article_path(article),  class: "btn btn-xs btn-primary" %>
