--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,60 @@
-<h2>Sign up</h2>
+<h2 class="center">Sign up</h2>
+ <div class='row'>
+  <div class='col-md-12'>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {class:"form-horizontal", role: "form"}) do |f| %>
+     <%= render "devise/shared/error_messages", resource: resource %>
+     
+       <div class='form-group'>
+         <div class='col-sm-2'> 
+          <%= f.label :username %>
+        </div>
+         <div class='col-sm-7'>
+          <%= f.text_field :username,class: 'form-control' ,autofocus: true, autocomplete: "username" %>
+        </div>
+       </div> 
+        <div class='form-group'>
+         <div class='col-sm-2'> 
+          <%= f.label :email %>
+        </div>
+         <div class='col-sm-7'>
+          <%= f.email_field :email,class: 'form-control' ,autofocus: true, autocomplete: "email" %>
+        </div>
+       </div> 
+       
+        <div class='form-group'>
+         <div class='col-sm-2'> 
+          <%= f.label :password %>
+           <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %>
+        </div>
+         <div class='col-sm-7'>
+          <%= f.password_field :password,class: 'form-control' , autocomplete: "new-password" %>
+        </div>
+       </div> 
+    <div class="form-group">
+      <div class='col-sm-2'>
+        <%= f.label :password_confirmation %>
+      </div>
+      <div class='col-sm-7'> 
+        <%= f.password_field :password_confirmation, class: 'form-control',autocomplete: "new-password" %>
+      </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="form-group">
+    <div class=" col-sm-offset-2 col-sm-10">
+    <%= f.submit "Sign up", class: 'btn btn-primary btn-lg'%>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+<div class='form-group'>
+  <div class=" col-sm-offset-2 col-sm-10">
+    <%= render "devise/shared/links" , class: 'btn btn-lg' %>
+  </div>
+  </div>
+  <div class="col-xs-4 col-xs-offset-4">
+ [   <%= link_to "Cancel request and return to Articles Listing", articles_path%> ]
+  </div>
+</div>
+</div>  
