--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <h1 align="center"> Listing all Alpha Bloggers</h1>
 <div align="center">
-<% @user.each do |user| %>
+    <%= will_paginate%>
+   <% @users.each do |user| %>
     <ul class="listing">
             <div class="row">
                 <div class= "well col-md-4 col-md-offset-4">
@@ -14,5 +15,6 @@
                 </div>
             </div>
     </ul>
-    <% end %>                    
+    <% end %>  
+       <%= will_paginate%>              
 </div>    
