--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,13 @@
 
     </div>
 </div>
-<h4 align="center"><%= @user.email %>'s articles </h4>
-<%= render 'articles/article', obj: @user.articles%>
+<h4 align="center"><%= @user.email %>'s articles </h4> 
+
+<div class="center">
+    <%=will_paginate @user_articles%>
+    </div>
+       <%= render 'articles/article', obj: @user_articles%>
+
+   <div class="center">
+    <%=will_paginate @user_articles%>
+    </div>
