--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -15,12 +15,14 @@
                     </small>
                 </div>
             </div>
-             <div class="article-actions">
-        <%= link_to "Edit Article", edit_article_path(article),  class: "btn btn-xs btn-primary" %>
-        <%= link_to "Delete Article", article_path(article),method: :delete,
+            <% if user_signed_in? && (current_user == article.user || current_user.admin?) %>
+                <div class="article-actions">
+                    <%= link_to "Edit Article", edit_article_path(article),  class: "btn btn-xs btn-primary" %>
+                     <%= link_to "Delete Article", article_path(article),
                                         data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, 
                                         class: "btn btn-xs btn-danger" %>
-            </div>
+                 </div>
+            <% end%>     
         </div>
     </div>
 <%end%>
