--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -21,13 +21,17 @@
         <strong> Description:</strong></h4>
         <hr>
         <%= simple_format(@article.description) %>
- 
+
+   
     <div class="article-actions">
-        <%= link_to "Edit Article", edit_article_path(@article),  class: "btn btn-xs btn-primary" %>
-        <%= link_to "Delete Article", article_path(@article),method: :delete,
+         <% if user_signed_in? && (current_user == @article.user || current_user.admin?) %>
+            <%= link_to "Edit Article", edit_article_path(@article),  class: "btn btn-xs btn-primary" %>
+            <%= link_to "Delete Article", article_path(@article),method: :delete,
                                         data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, 
                                         class: "btn btn-xs btn-danger" %>
+    <% end %>                                    
         <%= link_to "View all Articles", articles_path,  class: "btn btn-xs btn-success" %>
     </div>
+    
 </div>
 
