--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
  <div class='row'>
   <div class='col-md-12'>
 
-    <%= form_for(@user, as: resource_name, url: registration_path(resource_name), :html => {class:"form-horizontal", role: "form"}) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {class:"form-horizontal", role: "form"}) do |f| %>
      <%= render "devise/shared/error_messages", resource: resource %>
      
        <div class='form-group'>
