--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,8 @@
       <ul class="nav navbar-nav">
        
         <li><%= link_to "Articles", articles_path %></li>
-        <li><a href="#">Link</a></li>
+        <li><%= link_to "Users", users_path %></li>
+        <% if user_signed_in? %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -31,6 +32,7 @@
             <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
+        <% end %>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -39,16 +41,32 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in?%>
+         <% if user_signed_in?%>
           <li> <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                Your Profile <%= "Admin" if current_user.admin? %> <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Edit your profile" ,edit_user_registration_path %></li>
+                <li><%= link_to "View your profile", user_path(current_user) %></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </li> 
        <%else%>
             <li><%= link_to "Sign In", new_user_session_path, class: "nav-link"%>
-                <li class="nav-item">
-                <%= link_to 'Register', new_user_registration_path, class: 'nav-link' %>
-                </li>
+            <li><%= link_to "Sign up", new_user_registration_path, class: "nav-link"%>
+               
         <% end %>
        
          </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+
+
+
+
+
