--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,10 @@
                     </li>
                     <li>
                         <small><%= pluralize(user.articles.count, "article") if user.articles %></small>
+                        <% user_signed_in? and current_user.admin? %>
+                        <li><%= link_to "Delete this user", user_path(user),
+                                   data:{turbo_method: :delete,turbo_confirm: 'Are you sure you want to delete this user and all their articles'} %></li>
+
                     </li>
                 </div>
             </div>
