updated lock files

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <footer class="footer ">
     <small>
-       copyright &copy; <a href="www.alphablog.com">Welcome to AlphaBlog</a>
+       copyright &copy; <a href="#">Welcome to AlphaBlog</a>
      </small>
     <nav>
      <ul>
